# Quiz1-storytelling

./: Quiz2_21063.ipynb  README.md  election_map_bokeh_2024.html  pyproject.toml  quiz.ipynb  setup.py  test.py
vizstyle_bouchra/: __init__.py  bar.py  boxplot.py  dot.py  histogram.py  line.py  maps_bokeh.py  scatter.py  style.py
vizstyle_bouchra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
