[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizstyle_bouchra"
version = "0.1.0"
description = "Personal styled visualization library in Python"
readme = "README.md"
authors = [
    { name = "Bouchra Ahmed Ramdhane", email = "bouchramocktar@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "matplotlib>=3.5",
    "pandas",
    "geopandas",
    "bokeh",
    "xyzservices"
]

[project.urls]
Homepage = "https://github.com/Bichoumed/Quiz1-storytelling"
